vlib/v/checker/tests/use_deprecated_function_warning.vv
import os
fn main() {
	os.cp_r('./aa', './bb', true)
}
